fixed navbar whitespace
also changed amount of space between sections

--- a/style.css
+++ b/style.css
@@ -3,12 +3,17 @@
 
 /* ---------- NAVBAR ----------- */
 .sticky {
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 100%;
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-right: 10px;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -70,7 +75,7 @@ body {
 
 #frontpage {
     width: 100%;
-    height: 100vh;
+    height: 60vh;
 }
 
 #navbar {
@@ -100,7 +105,7 @@ body {
 
 #about {
     width: 100%;
-    height: 100vh;
+    height: 120vh;
 
     display: flex;
     flex-direction: row;    
